tests/parser/syntax-errors/comparisons-are-not-associative/comparison_ops_nonassoc_after_func.choc
# RUN: choco-opt "%s" | filecheck "%s"

def foo():
    pass
    pass

1 < 2 < 3

# CHECK:      SyntaxError (line 7, column 7): Comparison operators are not associative.
# CHECK-NEXT: >>>1 < 2 < 3
# CHECK-NEXT: >>>------^
